--- a/package.json
+++ b/package.json
@@ -6,12 +6,153 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "coverage": "c8 mocha"
+    "coverage": "c8 mocha",
+    "build": "babel src -d dist",
+    "lint": "eslint ."
   },
   "devDependencies": {
+    "@babel/cli": "^7.27.1",
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.1",
+    "@eslint/js": "^9.26.0",
     "c8": "^7.12.0",
     "chai": "^4.5.0",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
     "mocha": "^10.8.2",
     "mochawesome": "^7.1.3"
-  }
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "ansi-colors": "^4.1.3",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "argparse": "^2.0.1",
+    "assertion-error": "^1.1.0",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.3.0",
+    "brace-expansion": "^2.0.1",
+    "braces": "^3.0.3",
+    "browser-stdout": "^1.3.1",
+    "camelcase": "^6.3.0",
+    "chalk": "^4.1.2",
+    "check-error": "^1.0.3",
+    "chokidar": "^3.6.0",
+    "cliui": "^7.0.4",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "concat-map": "^0.0.1",
+    "convert-source-map": "^2.0.0",
+    "cross-spawn": "^7.0.6",
+    "dateformat": "^4.6.3",
+    "debug": "^4.4.0",
+    "decamelize": "^4.0.0",
+    "deep-eql": "^4.1.4",
+    "diff": "^5.2.0",
+    "emoji-regex": "^8.0.0",
+    "escalade": "^3.2.0",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^4.0.0",
+    "fill-range": "^7.1.1",
+    "find-up": "^5.0.0",
+    "flat": "^5.0.2",
+    "foreground-child": "^2.0.0",
+    "fs-extra": "^10.1.0",
+    "fs.realpath": "^1.0.0",
+    "fsu": "^1.1.1",
+    "get-caller-file": "^2.0.5",
+    "get-func-name": "^2.0.2",
+    "glob": "^8.1.0",
+    "glob-parent": "^5.1.2",
+    "graceful-fs": "^4.2.11",
+    "has-flag": "^4.0.0",
+    "he": "^1.2.0",
+    "html-escaper": "^2.0.2",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "is-plain-obj": "^2.1.0",
+    "is-unicode-supported": "^0.1.0",
+    "isexe": "^2.0.0",
+    "istanbul-lib-coverage": "^3.2.2",
+    "istanbul-lib-report": "^3.0.1",
+    "istanbul-reports": "^3.1.7",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "json-stringify-safe": "^5.0.1",
+    "jsonfile": "^6.1.0",
+    "locate-path": "^6.0.0",
+    "lodash.isempty": "^4.4.0",
+    "lodash.isfunction": "^3.0.9",
+    "lodash.isobject": "^3.0.2",
+    "lodash.isstring": "^4.0.1",
+    "log-symbols": "^4.1.0",
+    "loose-envify": "^1.4.0",
+    "loupe": "^2.3.7",
+    "make-dir": "^4.0.0",
+    "minimatch": "^5.1.6",
+    "mochawesome-report-generator": "^6.2.0",
+    "ms": "^2.1.3",
+    "normalize-path": "^3.0.0",
+    "object-assign": "^4.1.1",
+    "once": "^1.4.0",
+    "opener": "^1.5.2",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "pathval": "^1.1.1",
+    "picomatch": "^2.3.1",
+    "prop-types": "^15.8.1",
+    "randombytes": "^2.1.0",
+    "react-is": "^16.13.1",
+    "readdirp": "^3.6.0",
+    "require-directory": "^2.1.1",
+    "rimraf": "^3.0.2",
+    "safe-buffer": "^5.2.1",
+    "semver": "^7.7.1",
+    "serialize-javascript": "^6.0.2",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "signal-exit": "^3.0.7",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^7.2.0",
+    "tcomb": "^3.2.29",
+    "tcomb-validation": "^3.4.1",
+    "test-exclude": "^6.0.0",
+    "to-regex-range": "^5.0.1",
+    "type-detect": "^4.1.0",
+    "universalify": "^2.0.1",
+    "uuid": "^8.3.2",
+    "v8-to-istanbul": "^9.3.0",
+    "validator": "^13.15.0",
+    "which": "^2.0.2",
+    "workerpool": "^6.5.1",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "y18n": "^5.0.8",
+    "yargs": "^16.2.0",
+    "yargs-parser": "^20.2.9",
+    "yargs-unparser": "^2.0.0",
+    "yocto-queue": "^0.1.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
