--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/cli": "^7.27.1",
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.1",
+    "@babel/register": "^7.27.1",
     "@eslint/js": "^9.26.0",
     "c8": "^7.12.0",
     "chai": "^4.5.0",
@@ -119,6 +120,8 @@
     "picomatch": "^2.3.1",
     "prop-types": "^15.8.1",
     "randombytes": "^2.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-is": "^16.13.1",
     "readdirp": "^3.6.0",
     "require-directory": "^2.1.1",
