--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,15 +1,20 @@
-name: Lint Code
+name: ESLint CI
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - '**'
 
 jobs:
   lint:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "16"
-      - run: npm ci
+          node-version: '16'
+      - run: npm install
       - run: npx eslint .
