--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "color-name": "^1.1.4",
     "concat-map": "^0.0.1",
     "convert-source-map": "^2.0.0",
+    "core-js": "^3.42.0",
     "cross-spawn": "^7.0.6",
     "dateformat": "^4.6.3",
     "debug": "^4.4.0",
