--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "c8": "^7.12.0",
     "chai": "^4.5.0",
     "eslint": "^9.26.0",
+    "eslint-plugin-mocha": "^11.0.0",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.0.0",
     "husky": "^8.0.0",
