--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,17 +1,23 @@
-name: Lint
+name: Lint Codebase
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
-    branches: [main, master]
+    branches:
+      - main
+      - dev
     paths:
       - '**/*.js'
 
 jobs:
-  lint:
+  eslint:
+    name: Run ESLint
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Setup Node.js
@@ -20,7 +26,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm i
+        run: npm install
 
       - name: Run ESLint
         run: npm run lint
