--- a/package.json
+++ b/package.json
@@ -16,17 +16,23 @@
     "@eslint/js": "^9.26.0",
     "c8": "^7.12.0",
     "chai": "^4.5.0",
+    "cspell": "^9.0.1",
     "eslint": "^9.26.0",
+    "eslint-formatter-codeframe": "^7.32.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^17.18.0",
     "eslint-plugin-promise": "^7.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^15.5.2",
+    "markdownlint": "^0.38.0",
     "mocha": "^10.8.2",
-    "mochawesome": "^7.1.3"
+    "mochawesome": "^7.1.3",
+    "prettier": "^3.5.3",
+    "trunk": "^1.1.0",
+    "tslint": "^5.20.1"
   },
   "lint-staged": {
-    "*.js": "eslint --fix"
+    "lint": "eslint . --ext .js,.jsx"
   },
   "husky": {
     "hooks": {
