--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,4 +1,4 @@
-name: Lint JavaScript Code
+name: CI - Lint and Test
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  lint:
+  lint-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,10 +17,18 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-
+          node-version: '20'
       - name: Install dependencies
         run: npm install
 
+      - name: Fix husky permissions
+        run: chmod +x .husky/* || true
+
+      - name: Run husky install manually
+        run: npx husky install || true
+
       - name: Run ESLint
         run: npx eslint . --ext .js,.jsx
+
+      - name: Run tests
+        run: npm test
